# DevTools

./: AccountPage.qml  AuthManager.cpp  AuthManager.h  CMakeLists.txt  CodeToolsPage.qml  CustomDatePicker.qml  GradientModel.cpp  GradientModel.h  GradientPage.qml  Header.qml  Main.qml  ProfilePage.qml  Project.h  ProjectCard.qml  ProjectDetailPage.qml  ProjectManager.cpp  ProjectManager.h  ProjectPage.qml  README.md  Task.h  TaskCard.qml  TaskManager.cpp  TaskManager.h  TaskPage.qml  devtools.cpp  devtools.h  gradientmodel.cpp  gradientmodel.h  main.cpp  project.cpp  projectmodel.cpp  projectmodel.h  resources.qrc
